actualizacion deportes y facultades

--- a/templates/Deporte.html
+++ b/templates/Deporte.html
@@ -1,88 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deporte</title>
-    <link rel="stylesheet" href="../Estilo/deporte.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="../Estilo/deporte.css">
+</head>
+<body>
     <div class="arriba-facu">
-      <div class="deportes">
-        <h3>deportes</h3>
-      </div>
-      <nav class="link">
-        <a href="./Notificaciones.html">Notificaciones</a>
-        <a href="./Perfil.php">Perfil</a>
-        <a href="./inicio sin btn.html">Inicio</a>
-      </nav>
+        <div class="deportes">
+            <h3>deportes</h3>
+
+        </div>
+        <nav class="link">
+          <a href="./Notificaciones.html">Notificaciones</a>
+          <a href="./Perfil.php">Perfil</a>
+          <a href="./inicio sin btn.html">Inicio</a>
+
+        </nav>
     </div>
     <header class="textodedeporte">
-      <h2 class="textito">
-        ¡UNETE A UNO DE LOS EQUIPOS DE DEPORTE DE LA UNIVERSIDAD!
-      </h2>
-      <p>
-        ¿Estás listo para vivir la emoción, la camaradería y la competencia en
-        el campo de juego? ¡Es hora de unirte a los equipos deportivos de
-        nuestra universidad y dejar tu huella en la historia! Ya sea que tu
-        pasión sea el fútbol, el voleibol, el básquetbol o cualquier otro
-        deporte, ¡tenemos un equipo esperando para que te unas y seas parte de
-        algo grandioso! Únete a nosotros y experimenta la adrenalina de los
-        partidos, la alegría de la victoria y el compañerismo que solo el
-        deporte puede ofrecer. ¡No pierdas la oportunidad de formar parte de
-        algo extraordinario!
-      </p>
+        <h2 class="textito">¡UNETE A UNO DE LOS EQUIPOS DE DEPORTE DE LA UNIVERSIDAD!</h2>
+        <p>¿Estás listo para vivir la emoción, la camaradería y la competencia en el campo de juego? ¡Es hora de unirte a los equipos deportivos de nuestra universidad y dejar tu huella en la historia!
+            Ya sea que tu pasión sea el fútbol, el voleibol, el básquetbol o cualquier otro deporte, ¡tenemos un equipo esperando para que te unas y seas parte de algo grandioso!           
+            Únete a nosotros y experimenta la adrenalina de los partidos, la alegría de la victoria y el compañerismo que solo el deporte puede ofrecer. ¡No pierdas la oportunidad de formar parte de algo extraordinario!</p>
     </header>
-  </body>
-  <body>
+
+</body>
+<body>
     <div class="cartas-facu">
-      <img
-        src="https://csdcolocolo.cl/wp-content/uploads/2023/08/Foto-2-1.webp?x24711"
-        alt=""
-      />
-      <div class="informacion">
-        <h1>BÁSQUETBOL</h1>
-        <p>
-          ¿Listo para encestar y hacer historia en la cancha? Únete a nuestro
-          equipo de básquetbol y sé parte de un grupo dinámico que desafía los
-          límites y busca la victoria. ¡Convierte cada pase en una jugada épica
-          y únete a nosotros para experimentar la emoción del básquetbol como
-          nunca antes!
-        </p>
-        <a href="#" class="btn-1">Mas Información</a>
-      </div>
+        <img src="https://csdcolocolo.cl/wp-content/uploads/2023/08/Foto-2-1.webp?x24711" alt="">
+        <div class="informacion">
+            <h1>BÁSQUETBOL</h1>
+            <P>¿Listo para encestar y hacer historia en la cancha? 
+                Únete a nuestro equipo de básquetbol y sé parte de un grupo dinámico que desafía los límites y busca la victoria. 
+                ¡Convierte cada pase en una jugada épica y únete a nosotros para experimentar la emoción del básquetbol como nunca antes!</P>
+            <a href="https://www.facebook.com/IREDUNFVOFICIAL" class="btn-1">Mas Información</a>
+        </div>
     </div>
     <div class="cartas-facu">
-      <img
-        src="https://ichef.bbci.co.uk/ace/ws/640/cpsprodpb/B5B9/production/_92212564_gettyimages-185933155.jpg"
-        alt=""
-      />
-      <div class="informacion">
-        <h1>FUTBOLL</h1>
-        <p>
-          ¡Apasionados del fútbol, este es vuestro momento para brillar! Únete a
-          nuestro equipo y forma parte de un grupo lleno de energía, habilidad y
-          compañerismo. ¿Estás listo para marcar goles y vivir la emoción del
-          juego? ¡Te esperamos en el campo!
-        </p>
-        <a href="#" class="btn-1">Mas Información</a>
-      </div>
+        <img src="https://ichef.bbci.co.uk/ace/ws/640/cpsprodpb/B5B9/production/_92212564_gettyimages-185933155.jpg" alt="">
+        <div class="informacion">
+            <h1>FUTBOLL</h1>
+            <P>¡Apasionados del fútbol, este es vuestro momento para brillar! 
+                Únete a nuestro equipo y forma parte de un grupo lleno de energía, habilidad y compañerismo. 
+                ¿Estás listo para marcar goles y vivir la emoción del juego? ¡Te esperamos en el campo!</P>
+            <a href="https://www.facebook.com/IREDUNFVOFICIAL" class="btn-1">Mas Información</a>
+        </div>
     </div>
     <div class="cartas-facu">
-      <img
-        src="https://s1.significados.com/foto/voleibol-og.jpg?class=ogImageSquare"
-        alt=""
-      />
-      <div class="informacion">
-        <h1>VOLEIBOL</h1>
-        <p>
-          ¿Te encanta la sensación de saltar alto y golpear la pelota? Únete a
-          nuestro equipo de voleibol y descubre la emoción de este deporte lleno
-          de acción. Forma parte de un grupo unido, mejora tus habilidades y
-          diviértete en cada partido. ¡Ven y únete a la red de la diversión!
-        </p>
-        <a href="#" class="btn-1">Mas Información</a>
-      </div>
+        <img src="https://s1.significados.com/foto/voleibol-og.jpg?class=ogImageSquare" alt="">
+        <div class="informacion">
+            <h1>VOLEIBOL</h1>
+            <P>¿Te encanta la sensación de saltar alto y golpear la pelota? 
+                Únete a nuestro equipo de voleibol y descubre la emoción de este deporte lleno de acción. 
+                Forma parte de un grupo unido, mejora tus habilidades y diviértete en cada partido. 
+                ¡Ven y únete a la red de la diversión!</P>
+            <a href="https://www.facebook.com/IREDUNFVOFICIAL" class="btn-1">Mas Información</a>
+        </div>
     </div>
-  </body>
+</body>
 </html>
