--- a/templates/facultades.html
+++ b/templates/facultades.html
@@ -35,7 +35,7 @@
                             <h1>FACULTAD DE ADMINISTRACION</h1>
                             <p>Se centra en el estudio de los principios y prácticas de la administración, la economía, el marketing, las finanzas y
                                  otras áreas relacionadas con el funcionamiento y la gestión de empresas.</p>
-                            <a href="#" class="btn-1">Más Información</a>
+                            <a href="https://www.facebook.com/unfv.fce" class="btn-1">Más Información</a>
                         </div>
                     </div>                                                                         
             </div>
@@ -54,7 +54,7 @@
                            <h1>FACULTAD DE CIENCIAS SOCIALES</h1>
                            <p>se dedica al estudio de la sociedad, la cultura y el comportamiento humano. 
                                Esto incluye disciplinas como la sociología, la psicología, la antropología, la historia, la filosofía y muchas otras.</p>
-                           <a href="#" class="btn-1">Más Información</a>
+                           <a href="https://www.facebook.com/pages/Facultad-de-Humanidades-UNFV/428062303876613" class="btn-1">Más Información</a>
                            </div>
                        </div>
             </div>
@@ -73,7 +73,7 @@
                            <h1>FACULTAD DE INGENIERIA ELECTRONICA E INFORMATICA</h1>
                            <p>se dedica al estudio de la sociedad, la cultura y el comportamiento humano. 
                                Esto incluye disciplinas como la sociología, la psicología, la antropología, la historia, la filosofía y muchas otras.</p>
-                           <a href="#" class="btn-1">Más Información</a>
+                           <a href="https://www.facebook.com/FIEIOficial" class="btn-1">Más Información</a>
                            </div>
                        </div>
             </div>
@@ -92,7 +92,7 @@
                            <h1>FACULTAD DE PSICOLOGIA</h1>
                            <p>se dedica al estudio de la sociedad, la cultura y el comportamiento humano. 
                                Esto incluye disciplinas como la sociología, la psicología, la antropología, la historia, la filosofía y muchas otras.</p>
-                           <a href="#" class="btn-1">Más Información</a>
+                           <a href="https://www.facebook.com/pages/Facultad-De-Psicolog%C3%ADa-UNFV/140939489839726" class="btn-1">Más Información</a>
                            </div>
                        </div>
             </div>
