--- a/Estilo/deporte.css
+++ b/Estilo/deporte.css
@@ -59,7 +59,12 @@ body {
     font-size: 30px;
     font-weight: 600;
     text-transform: uppercase;
-    color: #fff;
+    color: #2e2e2e;
+}
+
+.textodedeporte .textito,
+.textodedeporte p {
+    color: black;
 }
 
 p {
@@ -79,8 +84,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: blueviolet;
-    background-image: linear-gradient(225deg, blueviolet 0%, #cc2426 33%, #4d5967 66%, #342f2f 100%);
+    background: rgb(255,255,255);
+    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,115,0,1) 100%);
     font-family: sans-serif;
 
 
